link to Account Settings from homepage

--- a/media/css/mkt/header.less
+++ b/media/css/mkt/header.less
@@ -80,6 +80,11 @@
     &.back {
         margin-left: 5px;
     }
+    b {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .nav-overlay.show {
@@ -250,11 +255,13 @@
     .header-button.home {
         display: inline-block;
         b {
-            display: inline-block;
-            width: 12px;
-            height: 18px;
-            background: url(../../img/mkt/glyphs/rocket_btn.png) no-repeat;
-            margin: 6px 0 0 15px;
+            background: url(../../img/mkt/glyphs/rocket_btn.png) 50% 50% no-repeat;
+        }
+    }
+    .home .header-button.settings {
+        display: inline-block;
+        b {
+            background: url(../../img/mkt/icons/settings.png) 50% 50% no-repeat;
         }
     }
     .home .header-button.home {
