--- a/mkt/templates/mkt/header.html
+++ b/mkt/templates/mkt/header.html
@@ -5,7 +5,10 @@
     <nav role="navigation">
       <a href="{{ url('home') }}" class="header-button home"><b></b></a>
       <a href="{{ url('account.settings') }}" class="header-button settings"><b></b></a>
+      <a href="#" class="header-button back"><b></b></a>
+      <a href="#" class="header-button search"><b></b></a>
       <a href="#" class="header-button filter">{{ _('Filter') }}</a>
+      <a href="#" class="header-button logout">{{ _('Log out') }}</a>
       {% block search %}
         {% set data = {'cat': category.id} if category else request.GET %}
         {% set search_form = SimpleSearchForm(data) %}
@@ -18,7 +21,6 @@
           {% endif %}
           <div id="site-search-suggestions"
                data-cat="apps" data-src="{{ url('search.suggestions') }}"></div>
-          <div id="find"></div>
           <button id="search-go">{{ _('Search') }}</button>
         </form>
       {% endblock %}
