--- a/mkt/templates/mkt/header.html
+++ b/mkt/templates/mkt/header.html
@@ -7,6 +7,7 @@
       <a href="{{ url('account.settings') }}" class="header-button settings"><b></b></a>
       <a href="#" class="header-button back"><b></b></a>
       <a href="#" class="header-button search"><b></b></a>
+      <a href="#" class="header-button cancel">&times;</a>
       <a href="#" class="header-button filter">{{ _('Filter') }}</a>
       <a href="#" class="header-button logout">{{ _('Log out') }}</a>
       {% block search %}
