added sign-out button to settings header

--- a/media/css/mkt/header.less
+++ b/media/css/mkt/header.less
@@ -343,5 +343,12 @@
                 background: url(../../img/mkt/icons/magnifier-blue.png) center no-repeat;
             }
         }
+        &.logout {
+            float: right;
+            width: auto;
+            padding: 0 10px;
+            line-height: 30px;
+            font-weight: 600;
+        }
     }
 }
